Fix body scroll on mobile when sidebar is shown
See issue #1 for details

--- a/css/adm-in-2.less
+++ b/css/adm-in-2.less
@@ -24,6 +24,11 @@ body{
 	min-height: 100%;
 	-webkit-tap-highlight-color: transparent;
 }
+@media (max-width: @breakpoint-sm){
+	html:not(.sidebar-hidden)>body{
+		overflow: hidden;
+	}
+}
 
 a{
 	text-decoration: underline;
